[package]
name = "veil"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "3.0"

hex = "0.4.3"
base64 = "0.22.1"
base32 = "0.5.1"
base85 = "2.0.0"
ascii85 = "0.2.1"

rand = "0.9.0"
libaes = "0.7.0"
chacha20 = "0.9.1"
rust-crypto = "0.2.36"

[profile.release]
strip = true
lto = true
codegen-units = 1
